2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($HTMLSpaceURIsAttrChecker): New placeholder.
	($HTMLIMTAttrChecker): New checker.
	(link@rel, link@href, link@type, style@type, 
	a@href, a@ping, a@ping, a@type, embed@src, embed@type,
	object@data, object@type, source@src, source@type, area@alt,
	area@shape, area@coords, area@href,
	area@ping, area@rel, area@type, script@src,
	script@defer, script@async, script@type): Checkers added.

2007-05-20  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Descendant checking was incorrect.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support |xml:*| and |xmlns:*|
	attributes.  Report an error if |Element.prefix|
	is |xmlns|.

	* NanoDOM.pm (prefix): New attribute.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: In |main| phase, |in body| insertion
	mode, action for |<iframe>| was missing.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for many of HTML5 elements.
	($GetHTMLNonNegativeIntegerAttrChecker): New.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for most elements up to |progress|.
	($HTMLURIAttrChecker): Placeholder.
	($HTMLIntegerAttrChecker, $GetHTMLFloatingPointNumberAttrChecker):
	New.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Attribute checkers 
	for global attributes, |html|, |base|, |style|, and |meta|.

	* NanoDOM.pm (insert_before): Weaken reference
	to the parent node.
	(Attr::new): Set |owner_element| attribute.
	(namespace_uri, manakai_local_name): New attribute implementations.
	(owner_element): New attribute.

2007-05-19  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm ($AttrChecker, $HTMLAttrChecker,
	$AnyChecker->{attr_checker}, $HTMLAttrsChecker,
	$Element->{$HTML_NS}->{''}): New.
	(check_element): Invoke attrs_checker for each element.

2007-05-13  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Don't use |manakai_element_type_match|.
