@@ -1,5 +1,13 @@
 2007-05-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-1.dat: Required attributes are
+	added to <link>s.
+
+	* content-model-2.dat: Tests for global event handler
+	content attributes, <link>s and <embed>s are added.
+
+2007-05-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-2.dat: Tests for additionally-implemented
 	attributes are added.
 
