@@ -1,5 +1,13 @@
 2007-05-20  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm ($HTMLEventHandlerAttrChecker): New placeholder.
+	($HTMLAttrChecker): Event handler content attributes
+	are added.
+	(link, embed): Required attribute is now checked.
+	(embed): Unknown local attributes are no longer warned.
+
+2007-05-20  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm ($HTMLSpaceURIsAttrChecker): New placeholder.
 	($HTMLIMTAttrChecker): New checker.
 	(link@rel, link@href, link@type, style@type, 
